...

    func setIsLiked(_ isLiked: Bool) {
        let likeImage = isLiked
        ? UIImage(named: Constants.likeButtonOn)
        : UIImage(named: Constants.likeButtonOff)
        likeButton.setImage(likeImage, for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "like button on" : "like button off"
    }

    func setLikeButtonEnabled(_ isEnabled: Bool) {
        likeButton.isEnabled = isEnabled
    }

...
